#7165 fixed overflow

--- a/resources/assets/sass/_animals.scss
+++ b/resources/assets/sass/_animals.scss
@@ -326,6 +326,10 @@ $width: 100px;
     width: 50%;
     padding-right: 1rem;
     margin-bottom: 1rem;
+    .content {
+      white-space: normal;
+      word-break: break-word;
+    }
   }
 }
 @media (max-width: 510px) {
